# redshift-shellcode

./: chess.c  compile.sh  create-simple.sql  inject_test.py  loader.c  loader_apply_move.py  loader_best_move.py  mmap-test.c  mmap-test.py  munge_elf.pl  shellcode.py  shellcode_bytes.py  simple-1.c  simple-2.c  simple-5.c  test.c
article-support/: absolute.c  inject_test.py  shellcode.py  simple-2.c  simple-2.py  simple-3.c  simple-4.c
dump-elf-bytes/: LICENSE  README.md  dump-elf-bytes.cabal  stack.yaml
dump-elf-bytes/app/: Main.hs
sql/: create-apply-move.sql  create-best-move.sql  create-perft.sql  create-show-move.sql
